# GRWM

./: .gitignore  CMakeLists.txt  README.md
docs/: procedure.md  roadmap.md
docs/01/: epic-01-project-foundation.md  feature-01-cmake-cuda-setup.md  feature-02-obj-mesh-loading.md  feature-03-binary-output-format.md
docs/02/: epic-02-half-edge-structure.md  feature-04-half-edge-construction.md  feature-05-gpu-adjacency-upload.md
docs/03/: epic-03-curvature-computation.md  feature-06-cuda-device-helpers.md  feature-07-cotangent-weight-assembly.md  feature-08-cusparse-spmv.md  feature-09-voronoi-area.md  feature-10-curvature-host-pipeline.md
docs/04/: epic-04-feature-edge-detection.md  feature-11-face-normal-kernel.md  feature-12-dihedral-angle-detection.md  feature-13-feature-edge-host-pipeline.md
docs/05/: epic-05-slot-priority-sort.md  feature-14-slot-position-hashing.md  feature-15-priority-score-kernel.md  feature-16-cub-segmented-sort.md  feature-17-slots-host-pipeline.md
docs/06/: epic-06-validation-visualization.md  feature-18-sphere-curvature-validation.md  feature-19-cube-feature-validation.md  feature-20-slot-sort-validation.md  feature-21-visualization-output.md
docs/07/: epic-07-testing-benchmarking.md  feature-22-test-sphere.md  feature-23-test-cube.md  feature-24-benchmark-framework.md
include/: cub_helpers.cuh  half_edge.h  preprocess.h
src/: curvature.cu  features.cu  half_edge.cpp  main.cpp  mesh_loader.cpp  slots.cu  stage1_curvature.cu  stage2_features.cu  validate.cu  visualize.cpp
tests/: CMakeLists.txt  benchmark.cpp  test_cube.cpp  test_sphere.cpp
